Updated and fixed the current Hover effect. Now the profile-content properly slides from off screen to the right of the image. Will need to update this.

--- a/components/ProfileCard.module.scss
+++ b/components/ProfileCard.module.scss
@@ -1,31 +1,35 @@
-//ProfileCard.module.scss
+/* ProfileCard.module.scss */
 
 .columnWide {
-    width: 50%;
-    padding: 12px;
-  
-    @media (max-width: 768px) {
-      width: 100%;
-      padding: 0px;
-      margin-top: 24px;
-    }
+  position: relative;
+  width: 50%;
+  padding: 12px;
+
+  /* Adjustments for smaller screens */
+  @media (max-width: 768px) {
+    width: 100%;
+    padding: 0;
+    margin-top: 24px;
   }
-  
-.content {
-  padding: 0 18px;
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.2s ease-out;
-  background-color: #f1f1f1;
 }
 
 .image {
-  width: 40rem; /* Adjust the width as needed */
-  height: auto; /* Maintain aspect ratio */
+  width: 100%;
+  height: auto;
 }
 
-/* Add this new class to make the content visible on hover */
-.hoverOverContainer:hover .content {
+/* Content initially hidden behind the image */
+.content {
+  position: absolute;
+  top: 0;
+  left: -200%; /* Initially hidden to the left */
+  width: 100%;
   max-height: 1000px; /* Adjust to an appropriate value */
-  transition: max-height 0.2s ease-in-out; /* Smooth transition */
+  overflow: hidden;
+  transition: left 0.2s ease-in-out; /* Smooth transition for left position */
+}
+
+/* Slide content to the right on hover */
+.hoverOverContainer:hover .content {
+  left: 100%; /* Slide content to the right on hover */
 }
