--- a/components/ProfileGrid.module.scss
+++ b/components/ProfileGrid.module.scss
@@ -60,7 +60,7 @@
 
 .exp{
   &:hover{
-    background-color: red;
+    background-color: rgba(255, 233, 88, 0.6);
     height: 40vh;
   }
 }
